--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ball</title>
+  <title>Мячик</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -10,5 +10,5 @@
 <link rel="stylesheet" href="styles.e360fc6e95696fb2f422.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.8046e971df7486de9ac5.js" nomodule defer></script><script src="polyfills-es2015.148ae192769e04ad1faa.js" type="module"></script><script src="main-es2015.a0b9a5b27dc98e15f38d.js" type="module"></script><script src="main-es5.a0b9a5b27dc98e15f38d.js" nomodule defer></script></body>
+<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.8046e971df7486de9ac5.js" nomodule defer></script><script src="polyfills-es2015.148ae192769e04ad1faa.js" type="module"></script><script src="main-es2015.eb511c4f9d667375e7f9.js" type="module"></script><script src="main-es5.eb511c4f9d667375e7f9.js" nomodule defer></script></body>
 </html>
