--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <!--  <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE7.js"></script>-->
-<link rel="stylesheet" href="styles.e360fc6e95696fb2f422.css"></head>
+</head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.8046e971df7486de9ac5.js" nomodule defer></script><script src="polyfills-es2015.148ae192769e04ad1faa.js" type="module"></script><script src="main-es2015.eb511c4f9d667375e7f9.js" type="module"></script><script src="main-es5.eb511c4f9d667375e7f9.js" nomodule defer></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
